Enhanced unit and integration tests

--- a/playground/multiple_selenium_tabs.ipynb
+++ b/playground/multiple_selenium_tabs.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d3318bf8",
    "metadata": {},
    "outputs": [
@@ -69,6 +69,12 @@
     "            _selenium, option, options.get(option), available_options\n",
     "        )\n",
     "html_with_correct_options = _selenium.driver.execute_script(\"return document.documentElement.outerHTML;\")\n",
+    "with open(\"temp_page.html\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(html_with_correct_options)\n",
+    "\n",
+    "# 2. Open a new tab and load the file\n",
+    "file_path =\"temp_page.html\"\n",
+    "\n",
     "time.sleep(2)\n",
     "# Loop through keywords starting from the first one\n",
     "# for i, keyword in enumerate(keywords):\n",
@@ -78,19 +84,10 @@
     "#         _selenium.driver.execute_script(f\"\"\"\n",
     "#             document.body.innerHTML = `{html_with_correct_options}`;\n",
     "#         \"\"\")\n",
-    "_selenium.driver.execute_script(\"window.open('about:blank');\")\n",
-    " # 2. Open a new tab\n",
-    "_selenium.driver.execute_script(\"window.open('');\")\n",
     "\n",
-    "# 3. Switch to the new tab\n",
-    "_selenium.driver.switch_to.window(_selenium.driver.window_handles[-1])  # Switch to the new tab\n",
     "\n",
     "# 4. Create a new document with the copied content\n",
-    "_selenium.driver.execute_script(\"\"\"\n",
-    "    document.open();\n",
-    "    document.write(arguments[0]);\n",
-    "    document.close();\n",
-    "\"\"\", html_with_correct_options)\n",
+    "_selenium.driver.execute_script(f\"window.open('{file_path}');\")\n",
     "    # Find the search box and enter the keyword\n",
     "    # _selenium.set_text_input_value(\n",
     "    #             \"by_css\", \"#query_div input[type='text']\", keyword\n",
